--- a/ITWitor/Views/Shared/OnService.cshtml
+++ b/ITWitor/Views/Shared/OnService.cshtml
@@ -50,8 +50,8 @@
                     <div class="card form-wrapper p-3 shadow">
                         <div style="position:relative">
 
-                            <img class="card-img" src="~/src/img/animation_onservice.gif" height="400px" style="object-fit:contain;position:absolute" />
-                            <img class="card-img" src="~/src/img/logo.svg" height="400px" style="object-fit:contain" />
+                            <img class="card-img" src="~/src/img/animation_onservice.gif" height="400px" style="object-fit:contain" />
+                          @*  <img class="card-img" src="~/src/img/logo.svg" height="400px" style="object-fit:contain" />*@
                         </div>
 
                         @*  <h2 class="text-center my-3">АВТОРИЗАЦИЯ</h2>*@
